<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="create_engine">Create Engine</string>
    <string name="login_room">Login Room</string>
    <string name="create_zego_engine">Create ZegoExpressEngine</string>
    <string name="start_publishing_stream">Start Publishing Stream</string>
    <string name="start_playing_streams">Start Playing Streams</string>
    <string name="destroy_engine">Destroy Engine</string>
    <string name="logout_room">Logout Room</string>
    <string name="creat_engine_success">Create Engine successfully!</string>
    <string name="create_engine_reminder">Please create engine firstly</string>
    <string name="start_publishing">Start Publishing</string>
    <string name="start_playing">Start Playing</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="stop_publishing">Stop Publishing</string>
    <string name="publish_streamID">Publish StreamID</string>
    <string name="mirror">Mirror</string>
    <string name="view_mode">View Mode</string>
    <string name="camera">Camera</string>
    <string name="camera_selection">Camera Selection</string>
    <string name="microphone">Microphone</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="play_streamID">Play StreamID</string>
    <string name="common_usage">Common Usage</string>
    <string name="video_chat_login">Login Room</string>
    <string name="video_chat">Video Chat</string>
    <string name="publishing">Publishing</string>
    <string name="playing">Playing</string>
    <string name="requesting">Requesting</string>
    <string name="resource_mode">resource mode</string>
    <string name="resource_mode_default">Default</string>
    <string name="resource_mode_rtc">RTC</string>
    <string name="resource_mode_L3">L3</string>
    <string name="resource_mode_CDN">CDN</string>
    <string name="resource_mode_CDN_Plus">CDN_Plus</string>
    <string name="enable_publish_direct_to_cdn">EnablePublishDirectToCDN</string>

    <string name="room_id_notice">If you want to talk to other users, you need to join the same room, which means that the RoomIDs of both parties should be the same.</string>
    <string name="user_id_notice">UserID should be generated by the developer and must be globally unique under the same AppID.</string>
    <string name="stream_id_notice">The StreamID should be generated by the developer and must be globally unique under the same AppID.</string>
    <string name="notes">There are three ways to live playing stream:\n1. L3: Enable L3 service on the console, and select "L3" for the streaming strategy\n2. CDN Plus: Enable L3 and CDN services on the console, and contact technical support Support enabling CDN Plus capability, select "Default" for the pull strategy\n3. CDN: Enable CDN service in the console, select "CDN" for the pull strategy</string>
    <string name="publish_notes">Live, there are three levels of L3, CDN Plus, and CDN. Among them, if you use CDN Plus or CDN for palying stream, you need to "retweet CDN". \nChoose one of the two ways to open:\n1. (Recommended) Default dynamic retweet; (Contact technical support for configuration)\n2. SDK interface/server interface dynamic retweet. \n<a href="https://doc-zh.zego.im/article/api?doc=Express_Video_SDK_API~java_android~enum~ZegoStreamResourceMode">Official website documentation</a></string>
</resources>