<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playing.Playing">

    <im.zego.commontools.logtools.logLinearLayout
        android:id="@+id/logView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/roomStateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Room state"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_below="@+id/logView"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/roomState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_toRightOf="@id/roomStateTitle"
        android:layout_below="@id/logView"
        android:layout_toEndOf="@id/roomStateTitle" />

    <TextureView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/roomStateTitle"
        android:layout_alignParentLeft="true"
        android:visibility="gone"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/start_playing"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/startButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/resourceMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notes"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="12dp"
            android:entries="@array/resourceMode" />

        <TextView
            android:id="@+id/roomIDTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:text="RoomID"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editRoomID"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/roomIDTitle"
            android:layout_toRightOf="@id/roomIDTitle"
            android:background="@drawable/edit_round"
            android:padding="5dp"
            android:text="0003"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editStreamID"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_round"
            android:padding="5dp"
            android:text="0003"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/streamIDTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="10dp"
            android:layout_toStartOf="@id/editStreamID"
            android:layout_toLeftOf="@id/editStreamID"
            android:text="@string/play_streamID"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/userIDTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/roomIDTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="UserID"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editUserID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editStreamID"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/userIDTitle"
            android:layout_toRightOf="@+id/userIDTitle"
            android:background="@drawable/edit_round"
            android:padding="5dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/viewModeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/resourceModeTitle"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/view_mode"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/viewModeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/resourceMode"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="12dp"
            android:entries="@array/viewMode" />

        <TextView
            android:id="@+id/cameraTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewModeTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/video"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/cameraSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewModeSpinner"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/microphoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cameraTitle"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/audio"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/microphoneSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cameraSwitch"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userIDTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:autoText="true"
            android:text="@string/notes" />

        <TextView
            android:id="@+id/resourceModeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notes"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/resource_mode"
            android:textColor="@color/black" />

    </RelativeLayout>
</RelativeLayout>